fix alignment

--- a/index.css
+++ b/index.css
@@ -43,7 +43,7 @@
 .center{
     display: flex;
     width: 100%;
-    align-items: center;
+    justify-content: center;
 }
 #sTop {
     top: 0;
